# genesis-engine

./: .gitattributes  .gitignore  AGENTS.md  AUDIT-REPORT-2026-05-12.md  AUDIT-REPORT-2026-05-16.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICS.md  FALSIFIABILITY.md  FUTURE-VISION.md  Genesis_Engine_Architecture_v1.0.docx  INDEX.md  Makefile  NEXT-SPRINT.md  PHASE2-PROGRESS-2026-05-11.md  PHASE4-PROGRESS-2026-05-14.md  PHASE5-PROGRESS-2026-05-13.md  PHASE5A-PLAN.md  PHASE5CD-STATUS-2026-05-13.md  PHASE5G-HYBRID-WORLDGEN.md  PROJECT-STATUS.md  README.ar.md  README.de.md  README.en.md  README.es.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pl.md  README.pt.md  README.ru.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SPRINT-2026-05-13.md  SPRINT-2026-05-14.md  STACK.md  (+9 more)
.github/: FUNDING.yml  (+1 more)
native/world-engine/: AUDIT-DELTA-2026-05-27.md  AUDIT-DELTA-2026-06-10.md  AUDIT-DELTA-2026-06-11.md  AUDIT-DELTA-2026-06-12.md  AUDIT-DELTA-2026-06-13.md  AUDIT-DELTA-2026-06-14.md  AUDIT-DELTA-2026-06-15.md  AUDIT-DELTA-2026-06-16-run3.md  AUDIT-DELTA-2026-06-16.md  AUDIT-DELTA-2026-06-17.md  AUDIT-DELTA-2026-06-18.md  AUDIT-DELTA-2026-06-19-run2.md  AUDIT-DELTA-2026-06-19.md  AUDIT-DELTA-2026-06-22-meta.md  AUDIT-DELTA-2026-06-22-run3.md  AUDIT-DELTA-2026-06-22.md  AUDIT-DELTA-2026-06-23.md  BENCHMARKS.md  BLIND-SPOTS-AUDIT-2026-06-13.md  Cargo.toml  NEXT-LEVEL-AUDIT.md  README.md  SCHEDULED-TASK-2026-06-23-axe-mapping.md  SCHEDULED-TASK-2026-06-24-delta.md  SCHEDULED-TASK-2026-06-25-delta.md  SCHEDULED-TASK-2026-06-27-delta.md  SCHEDULED-TASK-2026-06-29-delta-run2.md  SCHEDULED-TASK-2026-06-29-delta-run3.md  SCHEDULED-TASK-2026-06-29-delta-run4.md  SCHEDULED-TASK-2026-06-29-delta-run5.md  SCHEDULED-TASK-2026-06-29-delta-run6.md  SCHEDULED-TASK-2026-06-29-delta-run7.md  SCHEDULED-TASK-2026-06-29-delta-run8.md  SCHEDULED-TASK-2026-06-29-delta-run9.md  SCHEDULED-TASK-2026-06-29-delta.md  SCHEDULED-TASK-2026-07-01-delta.md  WORLD_VEILLE_REPORT-2026-06-28.md
native/world-engine/crates/: MUTATION-FRONTIER.md  STATUS.md
native/world-engine/crates/agent-api/: Cargo.toml
native/world-engine/crates/agent-api/src/: lib.rs  snapshot.rs
native/world-engine/crates/biome/: Cargo.toml
native/world-engine/crates/biome/src/: koeppen.rs  lib.rs  registry.rs  whittaker.rs
native/world-engine/crates/biome/tests/: koeppen_harness.rs
native/world-engine/crates/cache/: Cargo.toml
native/world-engine/crates/cache/src/: key.rs  l1.rs  l2.rs  lib.rs
native/world-engine/crates/climate/: Cargo.toml
native/world-engine/crates/climate/src/: lib.rs
native/world-engine/crates/core/: Cargo.toml
native/world-engine/crates/core/src/: coord.rs  coupler.rs  lib.rs  prf.rs  seed.rs  tick.rs  tick_domain.rs  voxel.rs
native/world-engine/crates/ecosystem/: Cargo.toml
native/world-engine/crates/ecosystem/src/: lib.rs
native/world-engine/crates/geology/: Cargo.toml
native/world-engine/crates/geology/src/: chemical.rs  lib.rs  mineral.rs  rock.rs  visual.rs
native/world-engine/crates/gpu/: Cargo.toml
native/world-engine/crates/gpu/src/: erosion.rs  erosion.wgsl  lib.rs
native/world-engine/crates/hydrology/: Cargo.toml
native/world-engine/crates/intent/: Cargo.toml
native/world-engine/crates/laws/: Cargo.toml
native/world-engine/crates/macro-bridge/: Cargo.toml
native/world-engine/crates/mesh/: Cargo.toml
native/world-engine/crates/noise/: Cargo.toml
native/world-engine/crates/persist/: Cargo.toml
native/world-engine/crates/physics/: Cargo.toml
native/world-engine/crates/pybindings/: Cargo.toml  pyproject.toml
native/world-engine/crates/scenario/: Cargo.toml
native/world-engine/crates/streaming/: Cargo.toml
native/world-engine/crates/studio/: Cargo.toml
native/world-engine/crates/terrain/: Cargo.toml
native/world-engine/crates/weather/: Cargo.toml
native/world-engine/crates/worldgraph/: Cargo.toml
native/world-engine/docs/: INNOVATIONS.md  RESEARCH-SCIENTIFIC.md  RESEARCH-SOTA.md
native/world-engine/proposals/: README.md
native/world-engine/proposals/axis1_geology/: dynamic_tectonics.rs  sdf_caves.rs
native/world-engine/proposals/axis2_climate/: advected_humidity.rs  seasons.rs
native/world-engine/proposals/axis3_ecosystem/: boids.rs  food_web.rs
native/world-engine/proposals/axis4_performance/: gpu_pipeline.rs  lru.rs  spatial_index.rs
native/world-engine/proposals/axis5_agent_api/: fog_of_war.rs  mutation_apply.rs  snapshot.rs
native/world-engine/proposals/axis6_devtools/: debug_overlay.rs  hot_reload.rs
native/world-engine/scenarios/: alpine_centennial.yaml  coastal_storm.yaml
scaffolding/: Cargo.toml  Makefile  pyproject.toml
scaffolding/config/: exp-catastrophe.yaml  exp-scarcity.yaml  exp-two-cultures.yaml  sim-continent.yaml  sim-petri.yaml  sim-stress.yaml
scaffolding/crates/ge-agents/: Cargo.toml
scaffolding/crates/ge-agents/src/: aging.rs  body.rs  drives.rs  fertility.rs  health.rs  identity.rs  inventory.rs  lib.rs  memory.rs  personality.rs  spawn.rs  systems.rs
scaffolding/crates/ge-ann/: Cargo.toml
scaffolding/crates/ge-ann/src/: detectors.rs  event.rs  journal.rs  lib.rs  lineage.rs
scaffolding/crates/ge-api/: Cargo.toml
scaffolding/crates/ge-api/assets/: dashboard.html
scaffolding/crates/ge-api/src/: main.rs  routes.rs  sim_loop.rs  state.rs
scaffolding/crates/ge-cognition/: Cargo.toml
scaffolding/crates/ge-cognition/src/: action.rs  apply.rs  intent.rs  lib.rs  perceive.rs  perception.rs  policy_r0.rs
scaffolding/crates/ge-core/: Cargo.toml
scaffolding/crates/ge-core/src/: hash.rs  ids.rs  lib.rs  prf.rs  tick.rs
scaffolding/crates/ge-py/: Cargo.toml
scaffolding/crates/ge-py/src/: fast_noise.rs  lib.rs
scaffolding/crates/ge-substrate/: Cargo.toml
scaffolding/crates/ge-substrate/src/: erosion.rs  lib.rs  soil.rs  voxel.rs  water.rs
scaffolding/crates/ge-world/: Cargo.toml
scaffolding/crates/ge-world/src/: biome.rs  chunk.rs  climate.rs  lib.rs  noise.rs  resource.rs  streaming.rs  terrain.rs
scaffolding/k8s/: sim-node.yaml
scaffolding/proto/: sim.proto
(+856 files in other folders)
