[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-engine"
version = "0.1.0"
description = "Deterministic artificial-life laboratory for emergent civilizations."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Genesis Engine Contributors" },
]
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
earth = [
  "pyproj>=3.6",
  "rasterio>=1.3",
]
dev = [
  "pytest>=8",
]

[tool.setuptools]
package-dir = { "" = "runtime" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["runtime"]
include = ["engine*"]

[tool.setuptools.package-data]
engine = ["*.html", "*.js"]

[tool.pytest.ini_options]
pythonpath = ["runtime"]
# `runtime-phase5/tests` was here but `runtime-phase5/` is the deprecated
# parallel prototype tree (see docs/PROJECT-VIABILITY.md). Its tests are an
# exact copy of `runtime/tests/` against a stale fork of the engine and they
# duplicate failures. The Makefile already runs `pytest runtime/tests`
# explicitly; this config now matches that.
testpaths = ["runtime/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
