[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-engine"
version = "0.1.0"
description = "Deterministic artificial-life laboratory for emergent civilizations."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Genesis Engine Contributors" },
]
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
earth = [
  "pyproj>=3.6",
  "rasterio>=1.3",
]
dev = [
  "pytest>=8",
  # ruff lints the capability arc (`make lint`) — wired into CI so the per-sprint
  # "ruff clean" claims are enforced, not just asserted (AUDIT-DELTA-2026-06-23 R-J13-3).
  "ruff>=0.6",
  # PIL (Pillow) is needed by the realism smoke suite — render_macro_with_atmosphere
  # writes PNGs and p72/p78 assert their existence. world_render._save_png is a
  # silent no-op if Pillow is missing, so without it the smokes pass internally
  # but the file checks fail. Listing here keeps `make doctor` + CI honest.
  "Pillow>=10",
]
# Compute-donation network module (`network/`, agrégé par `make network`). Autonome —
# pas requis pour runtime/engine, mais le step CI « Genesis Network (lint + tests +
# smoke) » importe ces deps. Sans ce groupe, `make network` casse à l'import fastapi
# (audit 2026-06-29 : la dépendance n'avait jamais été déclarée depuis l'ajout du step
# CI en 75c47fd, masqué par les échecs précoces lint/pytest).
network = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.5",
  # `network/tests/test_network.py` uses fastapi.testclient (starlette.TestClient),
  # which requires httpx at runtime. Not a transitive of fastapi itself in recent
  # versions, so it must be declared.
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = { "" = "runtime" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["runtime"]
include = ["engine*"]

[tool.setuptools.package-data]
engine = ["*.html", "*.js"]

[tool.pytest.ini_options]
pythonpath = ["runtime"]
# `runtime-phase5/tests` was here but `runtime-phase5/` is the deprecated
# parallel prototype tree (see docs/PROJECT-VIABILITY.md). Its tests are an
# exact copy of `runtime/tests/` against a stale fork of the engine and they
# duplicate failures. The Makefile already runs `pytest runtime/tests`
# explicitly; this config now matches that.
testpaths = ["runtime/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
