# Genesis Engine — Rust workspace
# All crates are pure-Rust except where noted.
[workspace]
resolver = "2"
members = [
    "crates/ge-core",
    "crates/ge-world",
    "crates/ge-substrate",
    "crates/ge-agents",
    "crates/ge-cognition",
    "crates/ge-ann",
    "crates/ge-api",
    "crates/ge-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-only"
authors = ["Genesis Engine Contributors"]

[workspace.dependencies]
# Core
tokio       = { version = "1", features = ["full"] }
rayon       = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry      = "0.27"
opentelemetry-otlp = "0.27"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rkyv        = { version = "0.8", features = ["bytecheck"] }
bytes       = "1"
thiserror   = "1"
anyhow      = "1"
uuid        = { version = "1", features = ["v4", "v7", "serde"] }
blake3      = "1"

# ECS / sim
bevy_ecs    = "0.15"
glam        = { version = "0.29", features = ["serde"] }
nalgebra    = "0.33"

# Math / determinism
rand        = "0.8"
rand_chacha = "0.3"  # cryptographic-grade, deterministic
rand_xoshiro = "0.6"

# Storage
sqlx        = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
redis       = { version = "0.27", features = ["tokio-comp", "cluster-async"] }
qdrant-client = "1"

# Network
tonic       = { version = "0.12", features = ["tls", "transport"] }
prost       = "0.13"
axum        = "0.7"

# Crypto
ring        = "0.17"
ed25519-dalek = "2"
# Post-quantum (via liboqs-rust binding)
oqs         = "0.10"

# Python bindings
pyo3        = { version = "0.23", features = ["extension-module"] }

# Compression
zstd        = "0.13"

# CLI
clap        = { version = "4", features = ["derive", "env"] }

# Observability
metrics     = "0.24"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.bench]
inherits = "release"
debug = true
