[package]
name = "ge-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ge-core = { path = "../ge-core" }

bevy_ecs.workspace = true
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
rkyv.workspace = true
rand.workspace = true
rand_chacha.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
