[package]
name = "ge-ann"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ge-core = { path = "../ge-core" }

serde.workspace = true
serde_json.workspace = true
glam.workspace = true
uuid.workspace = true
blake3.workspace = true
tracing.workspace = true
thiserror.workspace = true
