[package]
name = "ge-cognition"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ge-core = { path = "../ge-core" }
ge-agents = { path = "../ge-agents" }
ge-world = { path = "../ge-world" }

bevy_ecs.workspace = true
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_chacha.workspace = true
tracing.workspace = true
thiserror.workspace = true
