[package]
name = "ge-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rkyv.workspace = true
blake3.workspace = true
glam.workspace = true
rand.workspace = true
rand_chacha.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
