[package]
name = "ge-world"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ge-core = { path = "../ge-core" }

serde.workspace = true
serde_json.workspace = true
rkyv.workspace = true
glam.workspace = true
rand.workspace = true
rand_chacha.workspace = true
tracing.workspace = true
thiserror.workspace = true
bevy_ecs.workspace = true
