[package]
name        = "genesis-cache"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Content-addressed L1+L2 cache (in-mem + on-disk) keyed by BLAKE3"

[dependencies]
genesis-core = { path = "../core" }
blake3       = { workspace = true }
dashmap      = { workspace = true }
parking_lot  = { workspace = true }
serde        = { workspace = true }
bincode      = { workspace = true }
zstd         = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
hex          = { workspace = true }
memmap2      = { workspace = true }
once_cell    = { workspace = true }

[dev-dependencies]
tempfile     = "3.13"
proptest     = { workspace = true }
