[package]
name        = "genesis-climate"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Temperature, humidity, wind"

[dependencies]
genesis-core  = { path = "../core" }
genesis-noise = { path = "../noise" }
glam   = { workspace = true }
serde  = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
