[package]
name        = "genesis-core"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Deterministic primitives, types and math for Genesis World Engine"

[dependencies]
glam       = { workspace = true }
bytemuck   = { workspace = true }
siphasher  = { workspace = true }
blake3     = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
smallvec   = { workspace = true }
ahash      = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
