[package]
name        = "genesis-geology"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Deterministic mineral distribution + surface visual cues — Wave 43"

[dependencies]
genesis-core = { path = "../core" }
serde        = { workspace = true }
bytemuck     = { workspace = true }

[dev-dependencies]
proptest     = { workspace = true }
