[package]
name        = "genesis-persist"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Chunk serialization (bincode + Zstd)"

[dependencies]
genesis-core = { path = "../core" }
serde     = { workspace = true }
bincode   = { workspace = true }
zstd      = { workspace = true }
thiserror = { workspace = true }
blake3    = { workspace = true }
