[package]
name        = "genesis-physics"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
description = "Strong SI units and physical constants of the real universe"

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
