[build-system]
requires      = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name        = "genesis-world"
version     = "0.1.0"
description = "Python bindings for the Genesis Engine native world generator"
requires-python = ">=3.9"
license     = { text = "Apache-2.0 OR MIT" }

[tool.maturin]
manifest-path = "Cargo.toml"
features      = ["pyo3/extension-module"]
module-name   = "genesis_world"
